<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">
        
        <View
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="170dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/toolbar"
            />

        <FrameLayout
            android:id="@+id/image_container"
            android:layout_width="320dp"
            android:layout_height="200dp"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintLeft_toLeftOf="@id/container"
            app:layout_constraintRight_toRightOf="@id/container"
            android:layout_marginTop="20dp"
            android:background="@drawable/image_container"
            android:elevation="1dp"
            >
            <ImageView
                android:id="@+id/product_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </FrameLayout>


        <TextView
            android:id="@+id/name_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/image_container"
            app:layout_constraintLeft_toLeftOf="@id/image_container"
            app:layout_constraintRight_toRightOf="@id/image_container"
            android:layout_marginTop="30dp"
            android:textColor="@color/DarkGray"
            android:textStyle="bold"
            style="@style/SizeTextViewTitle"
            tools:text="Jaket johnnya ancient"
            android:maxLines="3"
            />

        <TextView
            android:id="@+id/price_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name_product"
            app:layout_constraintLeft_toLeftOf="@id/name_product"
            app:layout_constraintRight_toRightOf="@id/image_container"
            android:maxLines="1"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:text="Rp.1.000.000"
            />

        <TextView
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/price_product"
            app:layout_constraintLeft_toLeftOf="@id/price_product"
            android:text="@string/berat"
            />

        <TextView
            android:id="@+id/weight_product"
            android:layout_marginStart="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/price_product"
            app:layout_constraintLeft_toRightOf="@id/weight"
            app:layout_constraintRight_toRightOf="@id/image_container"
            android:maxLines="1"
            android:textStyle="bold"
            android:textColor="@color/DarkGray"
            tools:text="100Gr"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weight_product"
            app:layout_constraintLeft_toLeftOf="@id/price_product"
            android:textColor="@color/DarkGray"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/deskripsi"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/description_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintLeft_toLeftOf="@id/description"
            app:layout_constraintRight_toRightOf="@id/image_container"
            app:layout_constraintBottom_toTopOf="@id/add_cart"
            android:layout_marginBottom="20dp"
            android:maxLines="30"
            tools:text="Jaket X Multifungsi memiRendam Jaket X Multifungsi dengan air hangat selama 30 menit kemudian cuci dengan mild soap. Sebaiknya kucek dengan tangan. Apabila terdapat noda membandel, sikat jaket dengan lembut searah serat untuk menghindari kerusakan pori-pori jaket. Setelah dibilas, keringkan jaket dengan diangin-anginkan. Lapisi jaket dengan handuk atau kain lain saat menyetrika.Rendam Jaket X Multifungsi dengan air hangat selama 30 menit kemudian cuci dengan mild soap. Sebaiknya kucek dengan tangan. Apabila terdapat noda membandel, sikat jaket dengan lembut searah serat untuk menghindari kerusakan pori-pori jaket. Setelah dibilas, keringkan jaket dengan diangin-anginkan. Lapisi jaket dengan handuk atau kain lain saat menyetrika.Rendam Jaket X Multifungsi dengan air hangat selama 30 menit kemudian cuci dengan mild soap. Sebaiknya kucek dengan tangan. Apabila terdapat noda membandel, sikat jaket dengan lembut searah serat untuk menghindari kerusakan pori-pori jaket. Setelah dibilas, keringkan jaket dengan diangin-anginkan. Lapisi jaket dengan handuk atau kain lain saat menyetrika.liki 4 kantong untuk menyimpan ponsel, tablet, dompet, dan powerbank. Dilengkapi dengan hoodie dan penutup mata yang dapat dilepas, serta sarung tangan dan tempat untuk menyimpan earphone Dapatkan jaminan 100% uang kembali jika produk yang Anda terima tidak sesuai foto dan deskripsi kami.aket X Multifungsi tersedia dalam ukuran L dengan warna hitam, merah marun, cokelat, dan abu-abu. Warna yang terlihat pada foto sesuai dengan warna aslinya. Apabila terdapat perbedaan warna, disebabkan oleh pengaturan monitor dan efek cahaya pada layar monitor Anda. Rendam Jaket X Multifungsi dengan air hangat selama 30 menit kemudian cuci dengan mild soap. Sebaiknya kucek dengan tangan. Apabila terdapat noda membandel, sikat jaket dengan lembut searah serat untuk menghindari kerusakan pori-pori jaket. Setelah dibilas, keringkan jaket dengan diangin-anginkan. Lapisi jaket dengan handuk atau kain lain saat menyetrika."
            />

        <Button
            android:id="@+id/add_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/image_container"
            app:layout_constraintRight_toRightOf="@id/image_container"
            android:text="@string/tambah_ke_keranjang"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>